--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,16 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: go-semantic-release/action@v1
+        id: semrel
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          changelog-file: CHANGELOG.md
+          allow-initial-development-versions: true
+          changelog-generator-opt: "emojis=true"
+          prepend-changelog: true
