--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,3 +41,5 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
