--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,8 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
           go-version: 1.17
@@ -39,8 +41,6 @@ jobs:
           allow-initial-development-versions: true
           changelog-generator-opt: "emojis=true"
           prepend: true
-      - name: Hack to pull in current tag
-        uses: actions/checkout@v2
       - name: Run GoReleaser
         if: steps.semrel.outputs.version != ''
         uses: goreleaser/goreleaser-action@v2
