--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,9 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - uses: actions/setup-go@v2
         with:
           go-version: 1.17
@@ -41,6 +39,10 @@ jobs:
           allow-initial-development-versions: true
           changelog-generator-opt: "emojis=true"
           prepend: true
+      - name: Download Repo again to get latest tags
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Run GoReleaser
         if: steps.semrel.outputs.version != ''
         uses: goreleaser/goreleaser-action@v2
