--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,8 @@ builds:
       - linux
       - windows
       - darwin
+    flags:
+      - -trimpath
 archives:
   - replacements:
       darwin: Darwin
