--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,53 +2,46 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - develop
+      - feature/*
+      - release/*
+      - hotfix/*
+      - support/*
+      - renovate/**
   pull_request:
-    branches: [ main ]
-
+    branches:
+      - develop
+      - feature/*
+      - release/*
+      - hotfix/*
+      - support/*
+      - renovate/**
 jobs:
-
-  build:
-    runs-on: ubuntu-latest
+  test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
-
+    - name: Cache Artifacts
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+          ~/Library/Caches/go-build
+          %LocalAppData%\go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
     - name: Build
       run: go build -v ./...
-
     - name: Test
       run: go test -v ./...
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - uses: go-semantic-release/action@v1
-        id: semrel
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          changelog-file: CHANGELOG.md
-          allow-initial-development-versions: true
-          changelog-generator-opt: "emojis=true"
-          prepend: true
-      - name: Download Repo again to get latest tags
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Run GoReleaser
-        if: steps.semrel.outputs.version != ''
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
 
